# NexaQuant

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  async_prefetcher.hpp  build_and_test.sh  cpu_feature_detector.hpp  cpu_optimizer.hpp  create_test_model.py  create_test_suite.py  dummy.gguf  dynamic_layer_manager.hpp  gguf_parser.hpp  gpu_ternary_kernel.hpp  kv_cache_manager.hpp  main.cpp  mmap_loader.hpp  nexa_bench  nexa_test  speculative_engine.hpp  ternary_kernel.hpp  ternary_trainer.hpp  ternary_unpacker.hpp  test_model.gguf  tests.cpp  toy_dataset.txt  train_text_predictor.py  vram_multiplexer.hpp
